syntax = "proto3";

option csharp_namespace = "ClinicServiceNamespace";

import "google/protobuf/wrappers.proto";

//https://learn.microsoft.com/ru-ru/aspnet/core/grpc/json-transcoding?view=aspnetcore-7.0
import "google/api/annotations.proto";

package proto;

service ClinicService{
	// Добавить нового клиента
	rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
	// Обновить клиента
	rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
	// Удалить клиента
	rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
	// Получить клиента по id
	rpc GetClientById (GetClientByIdRequest) returns (GetClientByIdResponse);
	// Получить список клиентов
	rpc GetClients (GetClientsRequest) returns (GetClientsResponse){
		option (google.api.http) = {
		  get: "/api/clients"
		};
	}
}

message CreateClientRequest{
	// Документ
	string document = 1;
	// Фамилия
	string surname = 2;
	// Имя
	string firstName = 3;
	// Отчество
	string patronymic = 4;
}

message CreateClientResponse{
	google.protobuf.Int32Value clientId = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

message UpdateClientRequest{
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstName = 4;
	string patronymic = 5;
}

message UpdateClientResponse{
	int32 errCode = 1;
	string errMessage = 2;
}

message DeleteClientRequest{
	int32 clientId = 1;
}

message DeleteClientResponse{
	int32 errCode = 1;
	string errMessage = 2;
}

message GetClientByIdRequest{
	int32 clientId = 1;
}

message GetClientByIdResponse{
	ClientResponse clientId = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

message GetClientsRequest{
}

message GetClientsResponse{
	repeated ClientResponse clients = 1;
	int32 errCode = 2;
	string errMessage = 3;
}

message ClientResponse{
	int32 clientId = 1;
	string document = 2;
	string surname = 3;
	string firstName = 4;
	string patronymic = 5;
}